force-app/main/default/objects/Bill_Monitor__c/Bill_Monitor__c.object-meta.xml
<CustomObject>
    <label>Bill Monitor</label>
    <nameField>
        <displayFormat>W-{00000000}</displayFormat>
        <label>Bill Watch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bill Monitor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>