force-app/main/default/objects/Bill_Monitor__c/fields/Base_Difference__c.field-meta.xml
<CustomField>
    <fullName>Base_Difference__c</fullName>
    <formula>Amount__c -  Invoice_Base_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>