force-app/main/default/objects/Bill_Monitor__c/fields/Invoice_Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Base_Amount__c</fullName>
    <formula>Invoice_Amount__c -  Invoice_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>