force-app/main/default/objects/Bill_Monitor__c/fields/Invoice_Tax__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Tax__c</fullName>
    <label>Invoice Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>