force-app/main/default/objects/Bill_Monitor__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>Bill Monitor</relationshipLabel>
    <relationshipName>Bill_Monitor</relationshipName>
    <type>Lookup</type>
</CustomField>