force-app/main/default/objects/Bill_Monitor__c/fields/Multiple_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Invoices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Invoices</label>
    <type>Checkbox</type>
</CustomField>