force-app/main/default/objects/Bill_Monitor__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <formula>If(and(ROUND(Invoice_Amount__c,2) &lt;= Round(Paid_Amount__c,2),Invoice_Amount__c != 0),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid?</label>
    <type>Checkbox</type>
</CustomField>