force-app/main/default/objects/Bill_Monitor__c/fields/Sent_To_PNC__c.field-meta.xml
<CustomField>
    <fullName>Sent_To_PNC__c</fullName>
    <formula>Invoice__r.Sent_To_PNC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent To PNC?</label>
    <type>Checkbox</type>
</CustomField>