force-app/main/default/objects/Bill_Monitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Due_Date__c</columns>
    <columns>LS_Contract__c</columns>
    <columns>Invoice__c</columns>
    <columns>Multiple_Invoices__c</columns>
    <columns>Invoiced__c</columns>
    <columns>Invoice_Emailed__c</columns>
    <columns>Sent_To_PNC__c</columns>
    <columns>Paid__c</columns>
    <columns>Amount__c</columns>
    <columns>Invoice_Base_Amount__c</columns>
    <columns>Base_Difference__c</columns>
    <columns>Invoice_Tax__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Difference__c</columns>
    <columns>Paid_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>